HTML-Generator: Überblick, Überblick-Frame und alle Objekte-Frame werden wieder fehlerfrei generiert

--- a/src/main/resources/generator/html/ueberblick-frame.vm
+++ b/src/main/resources/generator/html/ueberblick-frame.vm
@@ -15,8 +15,10 @@
     <p><a href="alleobjekte-frame.html" target="konfigurationsbereichFrame">Alle Konfigurationsbereich</a></p>
     <h2 class="konfigurationsbereiche">Konfigurationsbereiche</h2>
     <ul class="konfigurationsbereiche">
-        #foreach( $konfigurationsbereich in $konfigurationsbereiche )
-        <li><a href="${konfigurationsbereich.zustaendiger.pid}/${konfigurationsbereich.pid}/konfigurationsbereich-frame.html" target="konfigurationsbereichFrame">${konfigurationsbereich.nameOderPid}</a></li>
+        #foreach( $konfigurationsbereich in $metamodell.konfigurationsbereiche )
+            <li>
+                <a href="${konfigurationsbereich.zustaendiger.pid}/${konfigurationsbereich.pid}/konfigurationsbereich-frame.html" target="konfigurationsbereichFrame">${konfigurationsbereich.nameOderPid}</a>
+            </li>
         #end
     </ul>
 </div>
