--- a/src/main/resources/generator/html/alleobjekte-frame.vm
+++ b/src/main/resources/generator/html/alleobjekte-frame.vm
@@ -13,14 +13,17 @@
 </div>
 <div class="content">
     <ul class="objekte">
-        #foreach( $objekt in $objekte )
-        <li><a href="${objekt.konfigurationsBereich.zustaendiger.pid}/${objekt.konfigurationsBereich.pid}/${objekt.pid}.html" target="objektFrame">
-            #if ( ${objekt.class.simpleName} == "Typ" )<strong>#end
-            #if ( ${objekt.class.simpleName} == "Attributgruppe" )<em>#end
-            $objekt.nameOderPid
-            #if ( ${objekt.class.simpleName} == "Typ" )</strong>#end
-            #if ( ${objekt.class.simpleName} == "Attributgruppe" )</em>#end
-        </a></li>
+        #foreach( $objekt in $metamodell.objekte )
+            <li>
+                <a href="${objekt.konfigurationsBereich.zustaendiger.pid}/${objekt.konfigurationsBereich.pid}/${objekt.pid}.html"
+                   target="objektFrame">
+                    #if ( ${objekt.class.simpleName} == "Typ" )<strong>#end
+                    #if ( ${objekt.class.simpleName} == "Attributgruppe" )<em>#end
+                    $objekt.nameOderPid
+                    #if ( ${objekt.class.simpleName} == "Typ" )</strong>#end
+                        #if ( ${objekt.class.simpleName} == "Attributgruppe" )</em>#end
+                </a>
+            </li>
         #end
     </ul>
 </div>
