--- a/src/main/resources/generator/html/attributgruppe.vm
+++ b/src/main/resources/generator/html/attributgruppe.vm
@@ -23,25 +23,25 @@
 <div class="header">
     <ul>
         <li><a href="ueberblick.html">Überblick</a></li>
-        <li><a href="${attributgruppe.konfigurationsBereich.zustaendiger.pid}/konfigurationsverantwortlicher-ueberblick.html">Konfigurationsverantwortlicher</a></li>
-        <li><a href="${attributgruppe.konfigurationsBereich.zustaendiger.pid}/${attributgruppe.konfigurationsBereich.pid}/konfigurationsbereich-ueberblick.html">Konfigurationsbereich</a></li>
+        <li><a href="${attributgruppe.konfigurationsbereich.zustaendiger.pid}/konfigurationsverantwortlicher-ueberblick.html">Konfigurationsverantwortlicher</a></li>
+        <li><a href="${attributgruppe.konfigurationsbereich.zustaendiger.pid}/${attributgruppe.konfigurationsbereich.pid}/konfigurationsbereich-ueberblick.html">Konfigurationsbereich</a></li>
         <li class="active">Objekt</li>
     </ul>
 </div>
 <div class="subheader">
     <ul>
-        <li><a href="index.html?${attributgruppe.konfigurationsBereich.zustaendiger.pid}/${attributgruppe.konfigurationsBereich.pid}/${attributgruppe.pid}.html" target="_top">Mit Frames</a></li>
-        <li><a href="${attributgruppe.konfigurationsBereich.zustaendiger.pid}/${attributgruppe.konfigurationsBereich.pid}/${attributgruppe.pid}.html" target="_top">Ohne Frames</a></li>
+        <li><a href="index.html?${attributgruppe.konfigurationsbereich.zustaendiger.pid}/${attributgruppe.konfigurationsbereich.pid}/${attributgruppe.pid}.html" target="_top">Mit Frames</a></li>
+        <li><a href="${attributgruppe.konfigurationsbereich.zustaendiger.pid}/${attributgruppe.konfigurationsbereich.pid}/${attributgruppe.pid}.html" target="_top">Ohne Frames</a></li>
     </ul>
 </div>
 <div class="content">
-    <p>${attributgruppe.konfigurationsBereich.zustaendiger.nameOderPid} / ${attributgruppe.konfigurationsBereich.nameOderPid}</p>
+    <p>${attributgruppe.konfigurationsbereich.zustaendiger.nameOderPid} / ${attributgruppe.konfigurationsbereich.nameOderPid}</p>
     <h1>Attributgruppe ${attributgruppe.nameOderPid} (${attributgruppe.pid})</h1>
     <p>${attributgruppe.kurzinfo}</p>
     #if( !$attributgruppe.beschreibung.empty )
     <p>${attributgruppe.beschreibung}</p>
     #end
-    #if( !$attributgruppe.attributgruppenVerwendungen.empty )
+    #if( !$attributgruppe.attributgruppenverwendungen.empty )
         <div class="ueberblick">
             <table border="0" cellpadding="0" cellspacing="0">
                 <caption><span>Aspekte</span></caption>
@@ -52,12 +52,12 @@
                     <th>Verwendung explizit vorgegegeben</th>
                 </tr>
                     #set( $row = 1 )
-                    #foreach( $attributgruppenVerwendung in $attributgruppe.attributgruppenVerwendungen )
+                    #foreach( $attributgruppenverwendung in $attributgruppe.attributgruppenverwendungen )
                     <tr>
-                        <td class="colFirst #if ($row % 2 == 0) rowColor #else altColor #end"><a href="${attributgruppenVerwendung.aspekt.konfigurationsBereich.zustaendiger.pid}/${attributgruppenVerwendung.aspekt.konfigurationsBereich.pid}/${attributgruppenVerwendung.aspekt.pid}.html">${attributgruppenVerwendung.aspekt.nameOderPid}</a></td>
-                        <td class="#if ($row % 2 == 0) rowColor #else altColor #end">${attributgruppenVerwendung.datensatzVerwendung}</td>
+                        <td class="colFirst #if ($row % 2 == 0) rowColor #else altColor #end"><a href="${attributgruppenverwendung.aspekt.konfigurationsbereich.zustaendiger.pid}/${attributgruppenverwendung.aspekt.konfigurationsbereich.pid}/${attributgruppenverwendung.aspekt.pid}.html">${attributgruppenverwendung.aspekt.nameOderPid}</a></td>
+                        <td class="#if ($row % 2 == 0) rowColor #else altColor #end">${attributgruppenverwendung.datensatzverwendung}</td>
                         <td class="#if ($row % 2 == 0) rowColor #else altColor #end">
-                            #if( ${attributgruppenVerwendung.verwendungExplizitVorgegeben} )
+                            #if( ${attributgruppenverwendung.verwendungExplizitVorgegeben} )
                                 Ja
                             #else
                                 Nein
