--- a/src/main/resources/generator/html/konfigurationsbereich-ueberblick.vm
+++ b/src/main/resources/generator/html/konfigurationsbereich-ueberblick.vm
@@ -104,6 +104,27 @@
             </table>
         </div>
     #end
+    #if( !$konfigurationsbereich.aspekte.empty )
+        <div class="ueberblick">
+            <table border="0" cellpadding="0" cellspacing="0">
+                <caption><span>Aspekte</span></caption>
+                <tbody>
+                <tr>
+                    <th>Aspekt</th>
+                    <th>Beschreibung</th>
+                </tr>
+                    #set( $row = 1 )
+                    #foreach( $aspekt in $konfigurationsbereich.aspekte )
+                    <tr>
+                        <td class="colFirst #if ($row % 2 == 0) rowColor #else altColor #end"><a href="${aspekt.konfigurationsbereich.zustaendiger.pid}/${aspekt.konfigurationsbereich.pid}/${aspekt.pid}.html">$aspekt.nameOderPid</a></td>
+                        <td class="#if ($row % 2 == 0) rowColor #else altColor #end block">${aspekt.kurzinfo}</td>
+                    </tr>
+                        #set( $row = $row + 1 )
+                    #end
+                </tbody>
+            </table>
+        </div>
+    #end
     #if( !$konfigurationsbereich.attributlisten.empty )
         <div class="ueberblick">
             <table border="0" cellpadding="0" cellspacing="0">
