--- a/src/main/resources/generator/diagramm/datenkatalog.vm
+++ b/src/main/resources/generator/diagramm/datenkatalog.vm
@@ -1,4 +1,4 @@
-digraph {
+graph {
 
     fontname="Arial bold" fontsize=18
     label="$diagrammtitel\n\n"
@@ -17,17 +17,17 @@ digraph {
 #foreach( $typ in $konfigurationsbereich.typen )
 #foreach( $supertyp in $typ.supertypen )
 #if( $konfigurationsbereich.typen.contains($supertyp) )
-    $supertyp.name -> $typ.name [dir=back arrowtail=onormal]
+    $supertyp.name -- $typ.name [dir=back arrowtail=onormal]
 #end
 #end
 #foreach( $mengenverwendung in $typ.mengen )
 #foreach( $objekttyp in $mengenverwendung.mengentyp.objektTypen )
-    $typ.name -> $objekttyp.name [label=$mengenverwendung.mengenname arrowhead=vee color=red fontcolor=red]
+    $typ.name -- $objekttyp.name [label=$mengenverwendung.mengenname#if( $mengenverwendung.mengentyp.referenzierungsart == "Aggregation" ) dir=both arrowtail=odiamond#elseif( $mengenverwendung.mengentyp.referenzierungsart == "Komposition" ) dir=both arrowtail=diamond#else dir=forward#end arrowhead=vee color=red fontcolor=red]
 #end
 #end
 #foreach( $attributgruppe in $typ.attributgruppen )
 #foreach( $referenz in $attributgruppe.referenzen )
-    $typ.name ->#if( $referenz.attributtyp.typ ) $referenz.attributtyp.typ.name #else Systemobjekt #end[label=$referenz.name arrowhead=vee color=blue fontcolor=blue]
+    $typ.name --#if( $referenz.attributtyp.typ ) $referenz.attributtyp.typ.name #else Systemobjekt #end[label=$referenz.name#if( $referenz.attributtyp.referenzierungsart == "Aggregation" ) dir=both arrowtail=odiamond#elseif( $referenz.attributtyp.referenzierungsart == "Komposition" ) dir=both arrowtail=diamond#else dir=forward#end arrowhead=vee color=blue fontcolor=blue]
 #end
 #end
 #end
