--- a/src/main/resources/generator/diagramm/datenkatalog.vm
+++ b/src/main/resources/generator/diagramm/datenkatalog.vm
@@ -15,19 +15,25 @@ graph {
 #end
 
 #foreach( $typ in $konfigurationsbereich.typen )
+#if( $zeigeVererbung )
 #foreach( $supertyp in $typ.supertypen )
 #if( $konfigurationsbereich.typen.contains($supertyp) )
     $supertyp.name -- $typ.name [dir=back arrowtail=onormal]
 #end
 #end
+#end
+#if( $zeigeMengen )
 #foreach( $mengenverwendung in $typ.mengen )
 #foreach( $objekttyp in $mengenverwendung.mengentyp.objektTypen )
     $typ.name -- $objekttyp.name [label=$mengenverwendung.mengenname#if( $mengenverwendung.mengentyp.referenzierungsart == "Aggregation" ) dir=both arrowtail=odiamond#elseif( $mengenverwendung.mengentyp.referenzierungsart == "Komposition" ) dir=both arrowtail=diamond#else dir=forward#end arrowhead=vee#if( !$mengenverwendung.erforderlich ) style=dashed#end color=red fontcolor=red]
 #end
 #end
+#end
+#if ( $zeigeAttributgruppen )
 #foreach( $attributgruppe in $typ.attributgruppen )
 #foreach( $referenz in $attributgruppe.referenzen )
     $typ.name --#if( $referenz.attributtyp.typ ) $referenz.attributtyp.typ.name #else Systemobjekt #end[label=$referenz.name#if( $referenz.attributtyp.referenzierungsart == "Aggregation" ) dir=both arrowtail=odiamond#elseif( $referenz.attributtyp.referenzierungsart == "Komposition" ) dir=both arrowtail=diamond#else dir=forward#end arrowhead=vee#if( $referenz.attributtyp.undefiniertErlaubt ) style=dashed#end color=blue fontcolor=blue]
+#end
 #end
 #end
 #end
